Updated Russian readme translation (thanks to War_Its_Life and Bur)

--- a/Release/Readme_rus.html
+++ b/Release/Readme_rus.html
@@ -12,10 +12,10 @@ Remake Demo</FONT><BR>
 Brought to you by Krom and Lewin</font></P><hr>
 <p align="center"><font face="Calibri">Содержание документа: <br>
 <a href="#Description">Описание</a> · <a href="#System_Requirements">Системные требования</a> · <a href="#Installing">Установка</a> 
-· <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
-<a href="#Known_bugs">Known bugs</a> · <a href="#Feedback">Feedback</a> ·
-<a href="#Source">Source Code</a> · <a href="#Credits">Credits</a> ·
-<a href="#Legal">Legal notice</a></font></p><hr>
+· <a href="#Gameplay">Игра</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
+<a href="#Known_bugs">Известные ошибки и неточности</a> · <a href="#Feedback">Отзывы</a> ·
+<a href="#Source">Исходные коды</a> · <a href="#Credits">Создатели</a> ·
+<a href="#Legal">Правовые обязательства</a></font></p><hr>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -25,22 +25,9 @@ Brought to you by Krom and Lewin</font></P><hr>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake (мы еще не придумали красивое название) - это попытка оживить оригинальную 
-стратегическую игру "Knights and Merchants: The Shattered Kingdom" (далее просто 
-&quot;КаМ&quot;). Наши цели - сделать игру работоспособной на современных компьютерах, а также исправить множество 
-ошибок в движке игры. Для того чтобы это сделать мы начали &quot;с нуля&quot; писать свой 
-движок, полагаясь на оригинальные файлы ресурсов игры. Это наша публичная 
-технологическая демо-версия, показывающая экономическую и военную стороны игры, 
-далее называемая &quot;игра&quot; или &quot;Remake&quot;. Наша цель продемонстрировать потенциал и 
-получить отклик по функциональности игры. Все использованные ресурсы взяты из 
-КаМ (графика, музыка, звуки, и т.п.) и используются только для разработки и 
-отладки. Финальная версия не будет включать в себя никаких защищенных авторских 
-ресурсов.<br>
-Мы полагаем, что у Вы обладаете лицензионной версией КаМ, иначе вам следует ее 
-приобрести - ее можно купить в ряде он-лайн магазинов.<br>
-Исполняемый файл KaM Remake доступен для свободного распространения и сделан 
-энтузиастами. Использованные приложения: Delphi 6, Delphi 7, FastMM4, Lazarus, 
-OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
+<p><font face="Calibri">KaM Remake (мы еще не придумали красивое название) - это попытка оживить оригинальную стратегическую игру &quot;Knights and Merchants: The Shattered Kingdom&quot; (далее просто &quot;КаМ&quot;). Наши цели - сделать игру работоспособной на современных компьютерах, а также исправить множество ошибок в движке игры. Для того чтобы это сделать мы начали &quot;с нуля&quot; писать свой движок, полагаясь на оригинальные файлы ресурсов игры. Это наша публичная технологическая демо-версия, показывающая экономическую и военную стороны игры, далее называемая &quot;игра&quot; или &quot;KaM Remake&quot;. Наша цель продемонстрировать потенциал и получить отклик по функциональности игры. Все использованные ресурсы взяты из КаМ (графика, музыка, звуки, и т.п.) и используются только для разработки и отладки. Финальная версия не будет включать в себя никаких защищенных авторских ресурсов.<br>
+Мы полагаем, что у Вы обладаете лицензионной версией КаМ, иначе вам следует ее приобрести - ее можно купить в ряде он-лайн магазинов.<br>
+Исполняемый файл KaM Remake доступен для свободного распространения и сделан энтузиастами. Использованные приложения: Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -67,19 +54,18 @@ OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
 	</table>
 </blockquote>
 <p><font face="Calibri">
-<b>1.</b> Распакуйте все файлы из архива  новую папку на Вашем компьютере.<br>
-<b>2.</b> Архив включает в себя звуковые драйверы OpenAL (<b>oalinst.exe</b>), которые Вам также следует установить, для игры в KaM Remake. 
-Последние версии драйверов Вы можете скачать с официального сайта OpenAL:
+<b>1.</b> Распакуйте все файлы содержащиеся в архиве в новую папку на Вашем компьютере.<br>
+<b>2.</b> Архив включает в себя аудио драйвера OpenAL (<b>oalinst.exe</b>), которые Вам также следует установить, для игры в KaM Remake. Свежую версию драйверов Вы можете скачать с официального сайта OpenAL:
 <a href="http://connect.creativelabs.com/openal/default.aspx">
 http://connect.creativelabs.com/openal/default.aspx</a> <br>
-<b>3.</b> KaM Remake использует OpenGL для графики, так что Вам также может потребоваться установить последние графический драйвера, от производителя вашей видео-карты.<br>
+<b>3.</b> KaM Remake использует OpenGL для вывода графики, так что Вам также может потребоваться установить последние графический драйвера, от производителя вашей видео-карты.<br>
 <b>4.</b> Запустите мод - KaM_Remake.exe.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0312.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Gameplay">Gameplay</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Gameplay">Игра</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
@@ -92,22 +78,17 @@ http://connect.creativelabs.com/openal/default.aspx</a> <br>
 <b>P</b> пауза<br>
 <b>Esc</b> закрыть открытое сообщение, или открытый раздел игрового меню<br>
 <b>Del</b> удалить открытое сообщение<br>
-<b>Spacebar</b> перейти к месту события открытого сообщения<br>
-<b>&#8592;&#8593;&#8594;&#8595;</b> курсорные кнопки для перемещения по карте<br>
-Scrolling the <b>Mouse wheel</b> will zoom in and out<br>
-<b>&#8592;</b> backspace will reset zoom back to 100%<br>
-<b>Middle mouse click</b> will place a horseman (scout) at the cursor position to allow you to explore 
-the map<br>
+<b>Пробел</b> перейти к месту события открытого сообщения<br>
+<b>&#8592;&#8593;&#8594;&#8595;</b> курсорные кнопки используются для перемещения по карте<br>
+<b>Колесико мыши</b> увеличивает и уменьшает масштаб<br>
+<b>&#8592;</b> backspace установит масштаб обратно на  100%<br>
+<b>Щелчок средней кнопкой мыши</b> поместит конного разведчика под курсором, что позволит Вам исследовать карту<br>
 </font></p>
-<p><font face="Calibri"><B>Installing add-on maps:</B><br><B>1.</B> Create a sub-folder in the Maps folder of the KaM Remake and name it, for example, &quot;My New Map&quot;.<br>
-<B>2.</B> Put inside .dat and .map files of the map and rename them accordingly &quot;My New Map.dat&quot; and &quot;My New Map.map&quot;. 
-File names should match folder name exactly.<br><B>3.</B> You can also make an 
-optional file called &quot;My New Map.txt&quot; which will contain the 
-mission description and other information. Use the same format as the missions provided 
-with the Remake. No official format information will be released because this file will probably be changed later on.</font></p>
-<p><font face="Calibri"><b>Adding custom music:</b><br>
-You can put your MP3 files into the Music folder of the KaM Remake, and they will be 
-included into the playlist automatically.<br>&nbsp;</font></p>
+<p><font face="Calibri"><B>Установка дополнительных карт:</B><br><B>1.</B> Cоздайте новую папку в папке &quot;KaM Remake\Maps&quot; и назовите по имени Вашей карты (например &quot;Моя Карта&quot;).<br>
+<B>2.</B> Поместить в созданную папку файлы карты (назвав их соответственно &quot;Моя Карта.dat&quot; и &quot;Моя Карта.map&quot;) имена файлов должны совпадать с именем папки!.<br>
+<B>3.</B> Вы также можете создать дополнительный файл &quot;МояКарта.txt&quot; содержащий описание миссии и другую информацию. Для шаблона используйте подобные файлы из миссии Ремейка. Оффицальная информация о формате пока недоступна, так как в будущем формат может быть изменен.</font></p>
+<p><font face="Calibri"><b>Добавление собственной музыки:</b><br>
+Вы можете скопировать ваши MP3 файлы в папку &quot;KaM Remake\Music&quot; и они будут автоматически добавлены в плейлист.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -118,71 +99,53 @@ included into the playlist automatically.<br>&nbsp;</font></p>
 	</table>
 </blockquote>
 <P>
-<font face="Calibri"><B>Silent crashes:</B><br>
-KaM Remake silently crashes on loading or music track change if there are any 
-problems with the Windows sound system. Removing the &quot;Music&quot; folder from the KaM Remake should fix this.<br></p>
-<p><B>Low framerate:</B><br>If you have ridiculously low framerate in game it 
-might be because your OpenGL drivers are 
-out of date. See the OpenGL version information in the top-left corner of the main menu, it should be 
-at least 1.4.x. If it is less you need to update your graphics card drivers 
-(check your card manufacturers website).<br></p>
-<p><B>Game errors:</B><br>Sometimes when something unexpected happens you will get an &quot;<i>An 
-error has occoured during gameplay</i>&quot; 
-message. Please read the message details and send recorded replay files from 
-Saves folder (save99.bas, save99.sav, save99.rpl) by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) 
-along with details of what you did to make it crash and any other information 
-that might be of use. Having these replay files will help us to fix the bug.<br></p>
-<p><B>Assertion failed errors:</B><br>Sometimes when something unexpected happens you will get an &quot;<i>Assertion failed</i>&quot; 
-message. In this case you should terminate the KaM_Remake from the Task Manager (press 
-Ctrl+Alt+Del, choose KaM Remake and press End Task button).
-<BR>Then browse to the KaM Remake folder and find the file &quot;KaM.log&quot; containing details of the crash. Please send this 
-file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) 
-along with details of what you did to make it crash and any other information 
-that might be of use. If possible please also provide game replay files as 
-explained in previous case.</font><br>&nbsp;</P>
+<font face="Calibri"><B>Падение игры без сообщения:</B><br>
+KaM Remake вылетает без каких-либо сообщений загрузки или при смене саундтрека, если есть проблема со звуковой подсистемой Windows. Удаление папки &quot;Music&quot; из KaM Remake исправляет эту ошибку.<br></p>
+<p><B>Низкая частота смены кадров:</B><br>
+Если у Вас в игре низкая частота смены кадров, это может быть вызвано старыми или отсутствующими драйверами OpenGL. Проверьте Вашу версию OpenGL драйверов, посмотрев в главном меню в верхний левый угол, версия должна быть как минимум 1.4.x. Если она ниже то необходимо обновить драйвера вашей карты (драйвера можно скачать на сайте производителя).<br></p>
+<p><B>Ошибки:</B><br>Иногда, когда в игре случается что-то непредвиденное, вы увидите ошибку типа &quot;<i>An error has occoured during gameplay</i>&quot;. Пожалуйста прочтите подробности ошибки и отправьте записанные файлы с реплеем из папки Saves (save99.bas, save99.sav, save99.rpl) на е-мейл Крому (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) или Левину (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) с описанем того что Вы делали в игре, что могло привести к ошибке, а также любую другую информацию, которую сочтете относящейся к делу. Наличие этих файлов поможет нам исправить ошибку.<br></p>
+<p><B>Ошибки &quot;Assertion failed&quot;:</B><br>
+Иногда, когда в игре случается что-то непредвиденное, вы увидите ошибку типа &quot;Assertion failed&quot;. В этом случае Вам следует остановить процесс KaM Remake через менеджер задач (нажмите Ctrl+Alt+Del, выберете KaM Remake и нажмите кнопку "остановить процесс"). Далее, откройте папку в которую был установлен KaM Remake и найдите файл &quot;KaM.log&quot; - в нем содержится дополнительная информация об ошибке. Пожалуйста отправьте этот файл Крому (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) или Левину (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) с описанем того что Вы делали в игре, что могло привести к ошибке, а также любую другую информацию, которую сочтете относящейся к делу. По возможности приложите файлы с реплеем, как описано в предедущем пункте.</font><br>&nbsp;</P>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0304.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Known_bugs">Known bugs and 
-limitations</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Known_bugs">Известные ошибки и неточности</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
 <p><font face="Calibri">
-Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
-Unit training in Town Hall and Siege Workshop is not functioning.<br>
-TPR troops are not supported yet.<br>
-AI behavior is still limited.<br>
+Поддерживаются только карты для одиночного игрока (в скрипте которых есть строка !SET_HUMAN_PLAYER).<br>
+Тренировка юнитов в Town Hall не работает.<br>
+Войска из дополнения TPR пока не поддерживаются.<br>
+Поведение ИИ сильно ограничено.<br>
 &nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0323.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Feedback">Feedback</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Feedback">Отзывы</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<font face="Calibri">Please use <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">the forum</A> or email (see below) to give us feedback. Most of the bugs are probably known, but we would love your comments, suggestions, compliments, etc.
+<font face="Calibri">Пожалуйста используйте <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">форум</A> или е-майл (см. ниже) чтобы сообщить нам об найденных ошибках. Большинство ошибок нам мы уже вероятно знакомы, но мы бы хотели видесть Ваши комментарии, предложения, комплименты и т.п..
 <br>
-If you can offer some help in Delphi coding, menu design, documentation, 
-translation or ideas 
-for improvement - please drop us an email or write on the forum.</font>
+Если Вы можете помочь чем-нибудь в написании кода в Delphi, дизайне меню, идеями для улучшения - пожалуйста, напишите нам на почту или оставьте свое сообщение на форуме.</font>
 <br>&nbsp;
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0308.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source">Source Code</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Source">Исходные коды</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">The KaM Remake source code is available at our project page:<br>
+<p><font face="Calibri">Исходные коды KaM Remake доступны по адресу:<br>
 <a href="http://code.google.com/p/castlesand">http://code.google.com/p/castlesand</a><br>
-We encourage you to submit bugs using built-in interface:<br>
+Мы призываем Вас сообщать о найденных ошибках используя встроенный интерфейс:<br>
 <a href="http://code.google.com/p/castlesand/issues/entry">http://code.google.com/p/castlesand/issues/entry</a><br>
 </font><br>&nbsp;</p>
 <blockquote>
@@ -191,35 +154,32 @@ We encourage you to submit bugs using built-in interface:<br>
 			<td>
 	<img border="0" src="Readme/GUI_0314.gif"></td>
 			<td><span style="vertical-align: middle"><B>
-			<FONT size="+2" face="Calibri">&nbsp;<a name="Credits">Credits</a></FONT></B></span></td>
+			<FONT size="+2" face="Calibri">&nbsp;<a name="Credits">Создатели</a></FONT></B></span></td>
 		</tr>
 	</table>
 </blockquote>
-<font face="Calibri">Lead programmer - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
-Programmer - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
-Thanks to Alex who introduced the core design back in 2008<br>
-Huge thanks to the KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
-The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf, Humbelum, Vas and many others) who helped us with decoding, advice, ideas and encouragement.<br>&nbsp;</font>
+<font face="Calibri">Ведущий программист - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
+Программист - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
+Особая благодарность Александру, который написал ядро структуры кода в 2008 г<br>
+Огромное спасибо сообществу КаМ и его активным членам (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf и многим другим), которые помогли нам с декодированием, советами, идеями и поддержкой.<br>&nbsp;</font>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0322.gif"></td>
 			<td><span style="vertical-align: middle"><B>
-			<FONT size="+2" face="Calibri">&nbsp;<a name="Legal">Legal notice</a></FONT></B></span></td>
+			<FONT size="+2" face="Calibri">&nbsp;<a name="Legal">Правовые обязательства</a></FONT></B></span></td>
 		</tr>
 	</table>
-</blockquote><font face="Calibri">Commercial use is prohibited.<br>
-Any used names, symbols or other copyrighted material is the property of the respective owners.<br>
-We do not take any responsibility if this mod harms your software or 
-hardware.<br>
-For obvious reasons publishing and/or sharing of this mod in any form is not 
-allowed without this readme file.<br>
-You can upload this mod to your site/server/homepage, but please let us know first.<br>
-We assume that you (end user/player) own a licensed copy of the game KaM, otherwise you should buy the game before using this mod. Failing to do so will be breaching the license agreement.</font>
+</blockquote><font face="Calibri">1. Коммерческое использование продукта запрещено.<br>
+2. Все использованные имена, символы или других защищенных авторскими правами материалов, являются их соответствующих владельцев.<br>
+3. Мы не несем ответственности, если данный мод (КаМ Ремейк) нанесет ущерб программному или аппаратному обеспечению Вашего компьютера.<br>
+4. По очевидным причинам, издание и/или распространение КаМ Ремейка, в любой форме, недопустимо без данного Readme файла.<br>
+5. Вы можете загрузить данный мод на ваш сайт/сервер/домашнюю страницу, но, пожалуйста, предварительно сообщите нам об этом.<br>
+6. Мы предполагаем, что Вы (пользователь/игрок) располагайте собственной лицензионной копией игры КАМ, в противном случае Вам следует купить игру, прежде чем Вы начнете играть в КаМ Ремейк. Невыполнение этого требования будет нарушением лицензионного соглашения.</font>
 </td>
 	</tr>
 </table>
-  	<p>&nbsp;</p></div>
+  	<p>&nbsp; Перевод выполнен при участии War_Its_Life</p></div>
   </BODY>
 </HTML>
