--- a/trunk/Release/Readme_ger.html
+++ b/trunk/Release/Readme_ger.html
@@ -6,20 +6,21 @@
 <div align="center">
   <table border="0" width="80%" cellspacing="0" cellpadding="0">
     <tr> 
-      <td> <P align="center"><font face="Calibri"><FONT size="+3">Knights and 
-          Merchants Remake Demo</FONT><BR>
+		<td>
+<P align="center"><font face="Calibri"><font size="+3">Knights and Merchants Remake Demo</font><br>
           Brought to you by Krom and Lewin</font></P>
-        <hr> <p align="center"><font face="Calibri">Inhalt der Readme: <br>
-          <a href="#Description">Beschreibung</a> · <a href="#Source">Quelltext</a> 
-          · <a href="#System_Requirements">Systemanforderungen</a> · <a href="#Installing">Installation</a> 
+<hr>
+<p align="center"><font face="Calibri">Inhalt der Readme: <br>
+<a href="#Description">Beschreibung</a> · <a href="#Source">Quelltext</a> · <a href="#System_Requirements">Systemanforderungen</a> · <a href="#Installing">Installation</a> 
           · <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> · 
           <a href="#Known_bugs">Bekannte Fehler</a> · <a href="#Feedback">Feedback</a> 
           · <a href="#Credits">Credits</a> · <a href="#Legal">Impressum</a></font></p>
         <hr> <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
             <tr> 
-              <td> <img border="0" src="Readme/GUI_0318.gif"></td>
-              <td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Beschreibung</a></FONT></B></td>
+              <td> 
+<img border="0" src="Readme/GUI_0318.gif"></td>
+              <td><b><font size="+2" face="Calibri">&nbsp;<a name="Description">Beschreibung</a></font></b></td>
             </tr>
           </table>
         </blockquote>
@@ -41,8 +42,7 @@
           Onlineshops verf&uuml;gbar.<br>
           Die Kam Remake Exe-Datei ist Freeware und wurde von Liebhabern des Spiels 
           erstellt. Die Anwendung benutzt:<br>
-          Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>
-          &nbsp;</p>
+          Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
             <tr> 
@@ -214,6 +214,7 @@
         <p><font face="Calibri">Leitender Programmierer - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
           Programmierer - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)</font><font face="Calibri"><br>
           Danke an Alex, der uns 2008 in das Core Design eingewiesen hat.<br>
+Thanks to StarGazer, who drew new cursors and icons for user interface<br>
           Gro&szlig;en Dank an die KaM Community und an ihre aktiven Mitglieder 
           (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, 
           Nick, Thunderwolf, Humbelum, Vas und viele mehr) daf&uuml;r dass sie uns beim Entschl&uuml;sseln 
@@ -241,10 +242,7 @@
         </p>
         </td>
     </tr>
-    <tr>
-      <td>&nbsp;</td>
-    </tr>
   </table>
-  	<p>&nbsp;</p></div>
+  	<p>&nbsp; Translation made with help from The Knight</p></div>
   </BODY>
 </HTML>
