--- a/trunk/Release/Readme_rus.html
+++ b/trunk/Release/Readme_rus.html
@@ -7,9 +7,9 @@
 <table border="0" width="80%" cellspacing="0" cellpadding="0">
 	<tr>
 		<td>
-<P align="center"><font face="Calibri"><FONT size="+3">Knights and Merchants 
-Remake Demo</FONT><BR>
-Brought to you by Krom and Lewin</font></P><hr>
+<P align="center"><font face="Calibri"><font size="+3">Knights and Merchants Remake Demo</font><br>
+Brought to you by Krom and Lewin</font></P>
+<hr>
 <p align="center"><font face="Calibri">Содержание документа: <br>
 <a href="#Description">Описание</a> · <a href="#System_Requirements">Системные требования</a> · <a href="#Installing">Установка</a> 
 · <a href="#Gameplay">Игра</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
@@ -21,7 +21,7 @@ Brought to you by Krom and Lewin</font></P><hr>
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0318.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Описание</a></FONT></B></td>
+			<td><b><font size="+2" face="Calibri">&nbsp;<a name="Description">Описание</a></font></b</td>
 		</tr>
 	</table>
 </blockquote>
@@ -161,6 +161,7 @@ KaM Remake вылетает без каких-либо сообщений загрузки или при смене саундтрека, 
 <font face="Calibri">Ведущий программист - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
 Программист - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
 Особая благодарность Александру, который написал ядро структуры кода в 2008 г<br>
+Спасибо StarGazer, который нарисовал новые курсоры и иконки для интерфейса<br>
 Огромное спасибо сообществу КаМ и его активным членам (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf и многим другим), которые помогли нам с декодированием, советами, идеями и поддержкой.<br>&nbsp;</font>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
