Fixing bugs: Fixed AV error in RemovePlayer procedure. Replaced fPlayers list back to array - it's easier to use. Updated Readmes

--- a/Release/Readme_eng.html
+++ b/Release/Readme_eng.html
@@ -7,9 +7,9 @@
 <table border="0" width="80%" cellspacing="0" cellpadding="0">
 	<tr>
 		<td>
-<P align="center"><font face="Calibri"><FONT size="+3">Knights and Merchants 
-Remake Demo</FONT><BR>
-Brought to you by Krom and Lewin</font></P><hr>
+<P align="center"><font face="Calibri"><font size="+3">Knights and Merchants Remake Demo</font><br>
+Brought to you by Krom and Lewin</font></P>
+<hr>
 <p align="center"><font face="Calibri">Readme contents: <br>
 <a href="#Description">Description</a> · <a href="#Source">Source Code</a> · <a href="#System_Requirements">System requirements</a> · <a href="#Installing">Installing</a> 
 · <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
@@ -21,7 +21,7 @@ Brought to you by Krom and Lewin</font></P><hr>
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0318.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Description</a></FONT></B></td>
+			<td><b><font size="+2" face="Calibri">&nbsp;<a name="Description">Description</a></font></b></td>
 		</tr>
 	</table>
 </blockquote>
@@ -193,6 +193,7 @@ We encourage you to submit bugs using built-in interface:<br>
 <font face="Calibri">Lead programmer - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
 Programmer - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
 Thanks to Alex who introduced the core design back in 2008<br>
+Thanks to StarGazer, who drew new cursors and icons for user interface<br>
 Huge thanks to the KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
 The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf, Humbelum, Vas and many others) who helped us with decoding, advice, ideas and encouragement.<br>&nbsp;</font>
 <blockquote>
